--- a/module/json.html
+++ b/module/json.html
@@ -1,35 +1,23 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./json_demo.json",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['module.json'] }</h2>
-    <div class="content">
-      <template $each="$['module.json.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
+<h2>${ $['module.json'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">什么是json模块</h3>
+    <div class="answer">json模块是json格式的可复用数据模块。</div>
+    <h3 class="question">json模块的配置项字段</h3>
+    <div class="answer">除模块的通用配置项字段外，json模块还支持布尔类型的“anonymous”字段。该字段的作用与<a href="module/script">脚本模块</a>配置项的同名字段相同。差别在于，json模块“anonymous”的默认值是false（具名方式），而脚本模块默认是匿名访问的。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] json module (anonymous)" src="https://codepen.io/dagger8224/embed/dydjRev?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/dydjRev">
+        [dagger-demo] json module (anonymous)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
+    <h3 class="question">json模块与作用域的差异</h3>
+    <div class="answer">json模块内容与<a href="directive/scope">作用域</a>都是对象结构，但用途不同。具体地说，json模块内容不具备作用域的响应依赖性，您应该将它作为静态数据使用。</div>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['module.json.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
