--- a/module/script.html
+++ b/module/script.html
@@ -1,35 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./script_demo.json",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['module.script'] }</h2>
-    <div class="content">
-      <template $each="$['module.script.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
+<h2>${ $['module.script'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">什么是脚本模块</h3>
+    <div class="answer">脚本模块是一组可复用的javaScript代码片段。</div>
+    <h3 class="question">脚本模块语法</h3>
+    <div class="answer">脚本模块基于标准的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/import">import</a>/<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/export">export</a>语法规范实现。如果需要，您也可以在脚本模块代码中import其他javaScript脚本。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] script module (import/export)" src="https://codepen.io/dagger8224/embed/vYdamoK?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/vYdamoK">
+        [dagger-demo] script module (import/export)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
+    <h3 class="question">脚本模块的配置项字段</h3>
+    <div class="answer">
+      <div>除模块的通用配置项字段外，脚本模块还支持布尔类型的“anonymous”字段。当“anonymous”为true（默认值）时，您无需显式指定模块名称即可直接在$module下访问模块中导出的方法。匿名访问方式可以让指令代码更加简洁。</div>
+      如果多个脚本模块下存在同名方法，为避免出现冲突，您需要将“anonymous”设置为false。我们来看例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] script module (anonymous)" src="https://codepen.io/dagger8224/embed/PoQBmZq?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/PoQBmZq">
+        [dagger-demo] script module (anonymous)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['module.script.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
