--- a/directive/exist.html
+++ b/directive/exist.html
@@ -5,7 +5,7 @@
       <div class="answer">$exist指令用于切换宿主元素及其子级元素的存在状态。</div>
       <h3 class="question">$exist指令表达式的执行结果</h3>
       <div class="answer">
-        <div>当指令表达式的执行结果为true或其他等效值，且宿主元素处于未创建（或销毁）状态时，宿主元素将进入创建过程。</div>
+        <div>当指令表达式的执行结果为true或其他等效值，且宿主元素处于未创建（或已销毁）状态时，宿主元素将进入创建过程。</div>
         <div>当指令表达式的执行结果为false或其他等效值，且宿主元素处于已创建或创建中状态时，宿主元素将被销毁。</div>
       </div>
       <h3 class="question">$exist指令的触发顺序</h3>
