--- a/directive/focus.html
+++ b/directive/focus.html
@@ -11,10 +11,8 @@
     <h3 class="question">$focus指令的预定义修饰符</h3>
     <div class="answer">$focus指令支持如下两个修饰符：
       <div class="margin">1. “oneway”，布尔类型。值为true代表当前指令是单向绑定的，用户对宿主元素的操作不会更新关联的作用域数据。</div>
-      <div class="margin">2. “prevent”，布尔类型。值为true代表<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/focus">将获取焦点的元素滚动到当前浏览器视窗中</a>。</div>
-    </div>
-    <h3 class="question">$focus指令示例</h3>
-    <div class="answer">下面我们来看$focus指令的示例。
+      <div class="margin">2. “prevent”，布尔类型。值为true代表<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/API/HTMLElement/focus">将阻止获取焦点的元素滚动到当前浏览器视窗中</a>。</div>
+      我们来看$focus指令的示例：
       <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $focus directive" src="https://codepen.io/dagger8224/embed/abqWRKx?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/abqWRKx">
         [dagger-demo] $focus directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
