--- a/directive/sentry.html
+++ b/directive/sentry.html
@@ -4,7 +4,7 @@
     <h3 class="question">+sentry指令的作用</h3>
     <div class="answer">
       <div>“+sentry”指令在即将发生页面内路由跳转时由框架触发调用。</div>
-      <div>当前页面中任意一个“+sentry”指令表达式的计算结果为true或等效值时，路由跳转过程将终止。</div>
+      <div>当前页面中任意一个“+sentry”指令表达式的计算结果为true或等效值时，路由跳转过程将终止。您可以使用“+sentry”指令作为路由守卫。</div>
       <div>“+sentry”指令表达式中可以使用指向目标<a href="router/introduction">路由</a>对象的上下文参数“$nextRouter”。</div>
     </div>
     <h3 class="question">+sentry指令示例</h3>
