--- a/directive/controller.html
+++ b/directive/controller.html
@@ -11,14 +11,14 @@
     <h3 class="question">控制指令的触发条件</h3>
     <div class="answer">
       <div>控制指令（<a href="directive/each">“$each”</a>和<a href="directive/exist">“$exist”</a>指令除外）将在宿主元素进入加载完成阶段后首次触发执行。</div>
-      <div>在宿主元素的生存周期内，如果指令表达式计算过程所依赖的作用域字段的值发生变化，控制指令可能会多次触发更新。这个机制称为控制指令对作用域变量的响应依赖。</div>
+      <div>在宿主元素的生存周期内，如果指令表达式计算过程所依赖的作用域字段的值发生变化，控制指令将再次触发更新。这个机制称为控制指令对作用域变量的响应依赖。</div>
       <div>我们来看一个响应依赖的示例：
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] responsive dependency" src="https://codepen.io/dagger8224/embed/PoQmegw?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/PoQmegw">
           [dagger-demo] responsive dependency</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
-        当input元素的值发生变化时，span上指令“$text”的表达式（依赖了作用域下的变量“a”和“b”）将重新触发执行。
+        当input元素的值发生变化时，span上指令“<a href="directive/text">$text</a>”的表达式（依赖了作用域下的变量“a”和“b”）将重新触发执行。
       </div>
     </div>
   </template>
