--- a/directive/expression.html
+++ b/directive/expression.html
@@ -21,9 +21,15 @@
     <h3 class="question">指令表达式的回调参数</h3>
     <div class="answer">您可以在指令表达式中使用如下几个回调参数：
         <div class="margin">1. “$scope”，对象类型。指向当前指令声明位置对应的<a href="directive/scope">作用域</a>变量</div>
-        <div class="margin">2. “$node”，对象类型。指向当前指令的宿主元素对象。</div>
-        <div class="margin">3. “$module”，对象类型。指向当前<a href="module/namespace">名空间</a>下定义的<a href="module/introduction">模块</a>变量</div>
+        <div class="margin">2. “$module”，对象类型。指向当前<a href="module/namespace">名空间</a>下定义的<a href="module/introduction">模块</a>变量</div>
+        <div class="margin">3. “$node”，对象类型。指向当前指令的<a href="directive/introduction">宿主元素</a>对象。</div>
         <div class="margin">4. “$event”，对象类型。$event参数只在<a href="directive/eventHandler">事件处理指令</a>表达式中生效，指向当前被触发的事件对象。</div>
+        参考如下示例：
+        <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] directive expression callback parameters" src="https://codepen.io/dagger8224/embed/wvmvBeX?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+          See the Pen <a href="https://codepen.io/dagger8224/pen/wvmvBeX">
+          [dagger-demo] directive expression callback parameters</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+          on <a href="https://codepen.io">CodePen</a>.
+        </iframe>
     </div>
     <h3 class="question">指令的执行结果</h3>
     <div class="answer">
