--- a/directive/html.html
+++ b/directive/html.html
@@ -8,16 +8,17 @@
       <div>指令表达式的执行结果是字符串，dagger.js在表达式执行完成后将结果内容转换为宿主元素的子级元素。</div>
       <div>您同样可以在这些动态创建出的元素上声明各种指令，这些指令表达式中的作用域对象默认指向$html宿主元素的作用域。</div>
       <div>如果有需要，您也可以在动态元素上继续声明$html指令来创建新的动态节点。</div>
-    </div>
-    <h3 class="question">$html指令的使用场景</h3>
-    <div class="answer">$html指令通常与<a href="router/introduction">路由配置项</a>结合使用，在路由发生切换时动态更新视图内容。</div>
-    <h3 class="question">$html指令的示例</h3>
-    <div class="answer">下面我们来看$html的示例。
-      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $html directive" src="https://codepen.io/dagger8224/embed/vYdZKgx?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+      我们来看一个示例：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] $html directive" src="https://codepen.io/dagger8224/embed/vYdZKgx?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
         See the Pen <a href="https://codepen.io/dagger8224/pen/vYdZKgx">
         [dagger-demo] $html directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
+    </div>
+    <h3 class="question">$html指令的使用场景</h3>
+    <div class="answer">
+      <div>$html指令通常与<a href="router/introduction">路由配置项</a>结合使用，在路由发生切换时动态更新视图内容。我们将在路由章节演示相关的使用示例。</div>
+      <div>请注意，不要将$html指令用于<a href="module/introduction">模块</a>宿主元素。</div>
     </div>
   </template>
   <template $exist="language == 'en-us'">
