--- a/directive/introduction.html
+++ b/directive/introduction.html
@@ -11,9 +11,12 @@
       <div>在一个元素上可以声明任意条指令，没有声明任何指令的元素称为平凡元素。</div>
     </div>
     <h3 class="question">指令的结构</h3>
-    <div class="answer">一个典型的指令由“ 前缀 + 名称 + <a href="directive/decorator">修饰符</a>（可选）+ <a href="directive/expression">表达式</a> ” 四部分组成，下面的input元素上声明了一个<a href="directive/controller">控制指令</a>：<div class="code">&lt;input $value#number="expression"&gt;</div>在上面的html片段中，input元素是指令的宿主元素，“$”是指令前缀，“value”是指令名称，“number”是指令修饰符，“expression”是指令表达式。</div>
+    <div class="answer">一个典型的指令由“ 前缀 + 名称 + <a href="directive/decorator">修饰符</a>（可选）+ <a href="directive/expression">表达式</a> ” 四部分组成，下面的input元素上声明了一个名为“value”的<a href="directive/controller">控制指令</a>：
+      <div class="code">&lt;input $value#number="expression"&gt;</div>
+      在上面的html片段中，input元素是指令的宿主元素，“$”是指令前缀，“value”是指令名称，“number”是指令修饰符，“expression”是指令表达式。
+    </div>
     <h3 class="question">指令的类型</h3>
-    <div class="answer">dagger.js定义了四种不同类型的指令，每种指令的定义和使用方法将在相关章节中进行具体讲解。下面表格中列举了这些指令的差异部分，方便读者进行直观比较：</div>
+    <div class="answer">dagger.js定义了四种不同类型的指令：</div>
     <table>
       <thead>
         <tr>
@@ -60,6 +63,7 @@
         </tr>
       </tbody>
     </table>
+    上面表格中列举了不同指令之间的差异，方便读者进行直观比较。每种指令的定义和使用方法将在后面的相关章节中进行具体讲解。
   </div>
 </template>
 <template $exist="language == 'en-us'">
