--- a/directive/loading.html
+++ b/directive/loading.html
@@ -8,16 +8,21 @@
       <div>当“+loading”指令表达式的执行结果是一个<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object">平凡对象</a>时，dagger.js将构造此对象的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Proxy">代理对象</a>并将其设置为新的自定义作用域。</div>
       <div>如果“+loading”指令表达式的执行结果是一个代理对象，dagger.js将此对象直接设置为新的自定义作用域。</div>
       <div>如果“+loading”指令表达式的执行结果不是平凡对象或代理对象，则不会创建新的自定义作用域。</div>
+      我们来看一个例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loading" src="https://codepen.io/dagger8224/embed/wvyoepB?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/wvyoepB">
+        [dagger-demo] +loading</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
     <h3 class="question">+loading指令的预定义修饰符</h3>
-    <div class="answer">“+loading”指令支持布尔类型的预定义指令修饰符root，root为true代表当前指令创建的自定义作用域直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。</div>
-    <h3 class="question">+loading指令示例</h3>
-    <div class="answer">下面我们来看一个+loading指令的示例。</div>
-    <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loading" src="https://codepen.io/dagger8224/embed/wvyoepB?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-      See the Pen <a href="https://codepen.io/dagger8224/pen/wvyoepB">
-      [dagger-demo] +loading</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-      on <a href="https://codepen.io">CodePen</a>.
-    </iframe>
+    <div class="answer">“+loading”指令支持布尔类型的预定义指令修饰符root，root为true代表当前指令创建的自定义作用域直接继承自<a href="directive/scope">根作用域</a>而非其父级作用域。我们来看一个例子：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +loading (root directive)" src="https://codepen.io/dagger8224/embed/NWYWGWR?default-tab=html%2Cresult" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/NWYWGWR">
+        [dagger-demo] +loading (root directive)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
+    </div>
   </div>
 </template>
 <template $exist="language == 'en-us'">
