--- a/directive/scope.html
+++ b/directive/scope.html
@@ -17,7 +17,7 @@
       <h3 class="question">作用域的工作方式</h3>
       <div class="answer">
         <div>dagger.js作用域的工作方式与原生javaScript<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Glossary/Scope">作用域</a>非常接近。请记住如下几个规则：</div>
-        <div class="margin">1. 某一层级的源指令创建的作用域将在宿主元素的其它指令（“<a href="directive/each">$each</a>”和“<a href="directive/exist">$exist</a>”指令除外，参见相关章节）及宿主元素子层级元素上的所有指令上生效。</div>
+        <div class="margin">1. 某一层级源指令创建的自定义作用域将在该源指令宿主元素的其它指令（“<a href="directive/each">$each</a>”和“<a href="directive/exist">$exist</a>”指令除外，参见相关章节）及宿主元素子层级元素上的所有指令上生效。</div>
         <div class="margin">2. 高层级宿主元素上声明的指令无法访问其子层级宿主元素的源指令创建出的自定义作用域。</div>
         <div class="margin">3. 低层级源指令上创建的作用域对象继承自高层级源指令上创建的作用域。这意味着您可以通过指令中的“$scope”访问上层作用域变量上那些未被覆盖的字段。</div>
         <div>下面的演示动画直观展示了作用域的工作方式：
@@ -28,13 +28,14 @@
           </iframe>
         </div>
       </div>
-      <h3 class="question">作用域的匿名访问</h3>
+      <h3 class="question">作用域字段的匿名访问</h3>
       <div class="answer">在实际开发过程中，您可以匿名访问作用域下的字段使代码更加精简：
         <div class="code">
           +click="alert($scope.value)" // 具名方式访问
           <br>
           +click="alert(value)" // 匿名方式访问
         </div>
+        请注意，如果在指令表达式的作用域链和全局作用域中都没有声明字段“value”，那么您将不能使用匿名方式进行访问。否则将导致一个<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/ReferenceError">ReferenceError</a>。
       </div>
       <h3 class="question">作用域示例</h3>
       <div class="answer">我们通过下面的示例来体验下作用域的用法：
