--- a/directive/unloading.html
+++ b/directive/unloading.html
@@ -2,19 +2,15 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">+unloading指令的作用</h3>
-    <div class="answer">“+unloading”指令在宿主元素从DOM树移除之前（卸载中阶段）由框架触发调用，用于对宿主元素或者作用域变量进行清理操作（清除不再需要的timerId等）。</div>
+    <div class="answer">“+unloading”指令在宿主元素从DOM树移除之前（卸载中阶段）由框架触发调用，用于对宿主元素或者作用域变量进行清理操作（清除不再需要的定时器ID等）。</div>
     <h3 class="question">+unloading指令的执行结果</h3>
-    <div class="answer">dagger.js不会对“+unloading”指令表达式的执行结果进行进一步处理。</div>
-    <h3 class="question">+unloading指令示例</h3>
-    <div class="answer">
-      <div>下面我们来看一个+unloading指令的示例。</div>
-      <div>为了方便演示，示例中使用了目前尚未讲解到的<a target="directive/controller">控制指令“<a target="directive/exist">$exist</a>”和<a target="directive/eventHandler">事件处理指令</a>“+click”。目前您只要知道这两个指令在本例中用于切换展示span元素就可以了，这些指令的具体用法将在后续章节中讲解。</div>
+    <div class="answer">dagger.js不会对“+unloading”指令表达式的执行结果进行进一步处理。请注意，与“+loading”指令不同，请不要通过返回Promise的方式来延迟宿主元素的卸载过程，框架始终将“+unloading”指令表达式作为同步方法执行。我们来看示例：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +unloading directive" src="https://codepen.io/dagger8224/embed/PoQbJWQ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/PoQbJWQ">
+        [dagger-demo] +unloading directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
-    <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +unloading directive" src="https://codepen.io/dagger8224/embed/PoQbJWQ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-      See the Pen <a href="https://codepen.io/dagger8224/pen/PoQbJWQ">
-      [dagger-demo] +unloading directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-      on <a href="https://codepen.io">CodePen</a>.
-    </iframe>
   </template>
   <template $exist="language == 'en-us'">
     <template $each="$['directive.unloading.sections']">
