--- a/directive/decorator.html
+++ b/directive/decorator.html
@@ -19,7 +19,7 @@
       </div>
       <div>在一个指令上可以同时添加多个修饰符：
         <div class="code">$value#input#trim:false</div>
-        上面的代码在指令“value”上声明了两个修饰符：“input”（值为true），和“trim”（值为false）。
+        上面的代码在指令“value”上声明了两个修饰符：“input”（值为true）和“trim”（值为false）。
       </div>
     </div>
     <h3 class="question">指令修饰符的编码</h3>
