--- a/directive/general.html
+++ b/directive/general.html
@@ -2,17 +2,15 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">一般指令的作用</h3>
-    <div class="answer">一般指令用于绑定宿主元素的普通同名属性。例如，您可以使用$id绑定宿主元素的id属性。</div>
+    <div class="answer">一般指令用于绑定宿主元素的普通同名属性。例如，您可以使用“$id”指令绑定宿主元素的id属性，“$src”指令绑定宿主元素的src属性。</div>
     <h3 class="question">一般指令表达式的执行结果</h3>
     <div class="answer">
-      <div>一般指令表达式的执行结果将转换为字符串后赋值给宿主元素的同名属性。</div>
-      <div>我们来看下一般指令的示例：
-        <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/gOvREdo?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
-          See the Pen <a href="https://codepen.io/dagger8224/pen/gOvREdo">
-          Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
-          on <a href="https://codepen.io">CodePen</a>.
-        </iframe>
-      </div>
+      一般指令表达式的执行结果将转换为字符串后赋值给宿主元素的同名属性。我们来看示例：
+      <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/gOvREdo?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/gOvREdo">
+        Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
     </div>
   </template>
   <template $exist="language == 'en-us'">
