--- a/directive/dynamic.html
+++ b/directive/dynamic.html
@@ -29,7 +29,7 @@
           </iframe>
         </div>
       </div>
-      <div>请注意，元指令本身是不支持动态创建的。这意味着您不能使用“@directive”指令来声明“<a target="_blank" href="directive/raw">@raw</a>”或者另一个“@directive”指令。</div>
+      <div>请注意，元指令本身是不支持动态创建的。这意味着您不能使用“@directive”指令来声明相同宿主元素上的“<a target="_blank" href="directive/raw">@raw</a>”或者另一个“@directive”指令。</div>
     </div>
   </template>
   <template $exist="language == 'en-us'">
