--- a/module/namespace.html
+++ b/module/namespace.html
@@ -6,11 +6,7 @@
           "uri": "#template",
           "style": "style"
       },
-      "style": "#style",
-      "demo": {
-          "uri": "./namespace_demo.json",
-          "type": "string"
-      }
+      "style": "#style"
     }
   </script>
   <template id="template">
