--- a/directive/raw.html
+++ b/directive/raw.html
@@ -3,7 +3,7 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">@raw指令的作用</h3>
     <div class="answer">
-      <div>dagger.js将“@raw”指令的宿主元素及其子级元素作为平凡元素处理（无论是否存在其他指令声明），不再进行进一步的解析或执行其他指令。</div>
+      <div>dagger.js将“@raw”指令的宿主元素及其子级元素作为平凡元素处理（无论宿主元素上是否存在其他指令声明），不再进行进一步的解析或执行其他指令。</div>
       <div>您可以在平凡子树的根元素上声明“@raw”指令以提升页面解析性能。我们来看例子：
         <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] @raw directive" src="https://codepen.io/dagger8224/embed/vYdWZeY?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
           See the Pen <a href="https://codepen.io/dagger8224/pen/vYdWZeY">
